--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "^3.7.2",
+    "use-persisted-state": "^0.3.0",
     "validator": "^12.1.0"
   },
   "scripts": {
