--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "@material-ui/core": "^4.9.5",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "typescript": "^3.7.2",
+    "react-scripts": "^3.4.0",
+    "typescript": "^3.8.3",
     "use-persisted-state": "^0.3.0",
-    "validator": "^12.1.0"
+    "validator": "^12.2.0"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
