--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
     "graphql": "^15.5.0",
+    "hosted-git-info": "^4.0.2",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
+    "is-svg": "^4.3.1",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
@@ -46,6 +48,7 @@
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
+    "postcss": "^8.3.0",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
