--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "mini-css-extract-plugin": "0.11.3",
+    "notistack": "^1.0.9",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss": "^8.3.0",
@@ -99,6 +100,7 @@
   },
   "devDependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/styles": "^4.11.4",
     "react-router-dom": "^5.2.0"
   },
   "jest": {
