--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@apollo/client": "^3.3.19",
     "@babel/core": "7.15.5",
+    "@babel/eslint-parser": "^7.15.7",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.1",
     "@svgr/webpack": "5.5.0",
+    "@testing-library/dom": "^8.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.0",
     "@testing-library/user-event": "^13.2.1",
@@ -19,6 +21,7 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
+    "browserslist": "^4.17.1",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
     "css-loader": "6.3.0",
@@ -40,6 +43,7 @@
     "hosted-git-info": "^4.0.2",
     "html-webpack-plugin": "5.3.2",
     "identity-obj-proxy": "3.0.0",
+    "immer": "^9.0.6",
     "is-svg": "^4.3.1",
     "jest": "27.2.1",
     "jest-circus": "27.2.1",
@@ -47,6 +51,7 @@
     "jest-watch-typeahead": "0.6.4",
     "mini-css-extract-plugin": "2.3.0",
     "notistack": "^1.0.9",
+    "nth-check": "^2.0.1",
     "optimize-css-assets-webpack-plugin": "6.0.1",
     "pnp-webpack-plugin": "1.7.0",
     "postcss": "^8.3.0",
@@ -65,6 +70,7 @@
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.1.0",
     "semver": "7.3.5",
+    "set-value": "^4.1.0",
     "style-loader": "3.3.0",
     "terser-webpack-plugin": "5.2.4",
     "ts-pnp": "1.2.0",
