--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.4.0",
     "css-loader": "6.3.0",
+    "css-select": "^4.1.3",
     "dotenv": "10.0.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^7.11.0",
